test/org/midica/testfiles/failing/block-reset-multiple.midica
INCLUDE inc/instruments.midica

( m
	0  c  /4
) m